--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,4 +1,32 @@
 **********************
+*** V1.3 (2016-09) *** Introducing new Stability numbers and python script for tutorials execution 
+**********************
+
+### Compatibility fixed for OpenFOAM 4.0
+
+### Solvers
+
+- impesFoam
+
+     - three stability numbers are now available : Coats, Todd and Courant (see doc for more informations)
+
+- anisoImpesFoam
+
+     - still two stability numbers (Coats and Courant) but minor changes to respect coding style (with impesFoam)
+
+### Tutorials
+
+- impesFoam
+
+     - capillary cases modified to use the new Todd's number condition
+    
+- python scripts
+
+     - runTutorials.py runs each tutorials from with end signal to check backward compatibility. Messages are [ OK ] or [ Error OpenFOAM ] or [ Error C++ ]
+
+     - cleanTutorials.py cleans test cases from tutorialsList.py
+
+**********************
 *** V1.2 (2016-05) *** Relative permeability and capillary pressure laws can be heterogenous 
 **********************
 
