--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,4 +1,33 @@
 **********************
+*** V1.4 (2017-02) *** New solver for one-phase flow : darcyFoam
+**********************
+
+### Toolbox re-organization
+
+### Solvers
+
+- darcyFoam
+
+  - one phase flow solver similar to porousSimpleFoam but using the porousMultiphaseFoam toolbox's parameters.
+
+### Bug Fixes
+
+- anisoImpesFoam/impesFoam/groundwaterFoam
+
+  - solver now update  phia or phib in SEqn.H only if Ua or Ub are fixedValue boundary conditions to avoid numerical instabilities (bug partially fixed in V1.3.1).
+
+
+************************
+*** V1.3.1 (2017-02) *** Parallel computation fixed
+************************
+
+### Bug Fixes
+
+- anisoImpesFoam/impesFoam/groundwaterFoam
+
+  - solvers does not update phia/phib in SEqn.H if boundary is a processor patch in order to avoid numerical instabilities.
+
+**********************
 *** V1.3 (2016-09) *** Introducing new Stability numbers and python script for tutorials execution 
 **********************
 
