--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,23 @@
+************************
+*** V1.4.1 (2017-08) *** Bug fixes and toolbox cleaning
+************************
+
+### Toolbox cleaning (indent fixed)
+
+### Bug fixes
+
+- darcyFoam
+
+  - Ua field is correctly written
+
+- impesFoam
+
+  - capillary term correctly computed ("fvc::interpolate(fvc:grad(Sb))" ==> "fvc:snGrad(Sb)")
+
+- incompressiblePhase
+
+  - test on phi header has been removed (useless and incompatibility with OpenFOAM 5.0)
+
 **********************
 *** V1.4 (2017-02) *** New solver for one-phase flow : darcyFoam
 **********************
