--- a/tutorials/porousScalarTransportFoam-tutorials/alphaDispersion/0/C.org
+++ b/tutorials/porousScalarTransportFoam-tutorials/alphaDispersion/0/C.org
@@ -21,7 +21,7 @@ internalField   uniform 0;
 
 boundaryField
 {
-    xandy
+    "x0|x1|ydirection"
     {
         type            zeroGradient;
     }
