porousShallowWaterFoam : solver + test cases OK

--- a/tutorials/porousShallowWaterFoam-tutorials/1Dwave_UFixed/constant/z0.org
+++ b/tutorials/porousShallowWaterFoam-tutorials/1Dwave_UFixed/constant/z0.org
@@ -1,8 +1,7 @@
-
 /*--------------------------------*- C++ -*----------------------------------*\
 | =========                 |                                                 |
 | \\      /  F ield         | OpenFOAM: The Open Source CFD Toolbox           |
-|  \\    /   O peration     | Version:  4.1                                   |
+|  \\    /   O peration     | Version:  5.0                                   |
 |   \\  /    A nd           | Web:      www.OpenFOAM.org                      |
 |    \\/     M anipulation  |                                                 |
 \*---------------------------------------------------------------------------*/
@@ -10,33 +9,31 @@ FoamFile
 {
     version     2.0;
     format      ascii;
-    class       dictionary;
-    location    "system";
-    object      setFieldsDict;
+    class       volScalarField;
+    location    "constant";
+    object      z;
 }
 // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * //
 
-defaultFieldValues
-(
-	volScalarFieldValue z0 0
-);
+dimensions      [0 1 0 0 0 0 0];
+
+internalField   uniform 0;
+
+boundaryField
+{
+    inlet
+    {
+        type            zeroGradient;
+    }
+    outlet
+    {
+        type            zeroGradient;
+    }
+    frontAndBack
+    {
+        type            empty;
+    }
+}
 
 
-
-regions
-(
-    // injection
-   boxToCell
-   {
-     box (0 0 0) (0.5 0.1 0.1);
-     fieldValues
-	(
-	   volScalarFieldValue z0 0.1 
-     	);
-   }   
-
-
-);
-
-
-
+// ************************************************************************* //
